--- a/src/app/Chaos.Octopus/Chaos.Octopus.csproj
+++ b/src/app/Chaos.Octopus/Chaos.Octopus.csproj
@@ -30,16 +30,37 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CHAOS, Version=1.0.4985.35372, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\CHAOS.dll</HintPath>
+    </Reference>
     <Reference Include="Chaos.Portal">
       <HintPath>..\..\..\lib\Chaos.Portal.dll</HintPath>
     </Reference>
+    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module\Data\JobRepository.cs" />
+    <Compile Include="Module\Data\Mapping\JobMapping.cs" />
+    <Compile Include="Module\Data\Model\Job.cs" />
+    <Compile Include="Module\Data\OctopusRepository.cs" />
+    <Compile Include="Module\Extension\Dto\Job.cs" />
     <Compile Include="Module\Extension\v6\Job.cs" />
     <Compile Include="Module\OctopusModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Sql\storedprocedure\Job_Set.sql" />
+    <Content Include="Sql\storedprocedure\Job_Get.sql" />
+    <Content Include="Sql\tables\1.Job.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
