--- a/src/app/Chaos.Octopus/Chaos.Octopus.csproj
+++ b/src/app/Chaos.Octopus/Chaos.Octopus.csproj
@@ -41,6 +41,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\lib\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -48,6 +52,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Module\Bindings\JobParameterBinding.cs" />
     <Compile Include="Module\Data\JobRepository.cs" />
     <Compile Include="Module\Data\Mapping\JobMapping.cs" />
     <Compile Include="Module\Data\Model\Job.cs" />
